Fixed generated object ngFor exceptions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
   <router-outlet></router-outlet>
 </div>
 
-<!--Top navigation bar-->
+<!--Bottom navigation bar-->
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
 
@@ -48,7 +48,7 @@
       <li><a class="btn" (click)="clerk()">Clerk Administrator</a></li>
       <li><a class="btn">Contact</a></li>
       <li><a class="btn">About</a></li>
-      <p class="navbar-text">&copy; Secure Package</p>
+      <p class="navbar-text">&copy; Secure Package (2018)</p>
     </ul>
   </div>
 </nav>
