--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -185,7 +185,7 @@
 
       <!--Footer with buttons-->
       <div class="modal-footer">
-        <button type="button" class="btn btn-success" (click)="proposeTerms()">Propose terms</button>
+        <button type="button" class="btn btn-success" (click)="proposeTerms()"  data-dismiss="modal">Propose terms</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
