--- a/src/app/item-manager/item-manager.component.html
+++ b/src/app/item-manager/item-manager.component.html
@@ -1,11 +1,14 @@
 <!--ItemManagerComponent: handles item management by the user, as well as proposals-->
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-lg-6 col-lg-offset-3">
 
       <!--User's items browser-->
-      <div class="row" *ngIf="manager_type == 'forsale'">
+      <div class="row" *ngIf="manager_type == 'adverts'">
         <!--Item display-->
+        <div class="alert alert-warning" *ngIf="item_display.length == 0">
+          <p><span class="glyphicon glyphicon-exclamation-sign"></span> You have no active advertisements.</p>
+        </div>
         <div *ngFor="let item of item_display">
           <div class="alert alert-info">
             <div class="row">
@@ -34,7 +37,7 @@
                 <button class="btn btn-primary manage_button" [disabled]="item.state != 'CREATED'" (click)="fetchItemTerms(item.agreement_id)" data-toggle="modal" data-target="#termsModal"><span class="glyphicon glyphicon-list-alt"></span> Manage proposals</button>
               </div>
               <div class="col-lg-4">
-                <button class="btn btn-primary manage_button" [disabled]="item.state != 'CREATED'" (click)="removeItem(item.agreement_id)"><span class="glyphicon glyphicon-remove"></span> Delete item</button>
+                <button class="btn btn-primary manage_button" [disabled]="item.state != 'CREATED'" (click)="item_to_delete = item.agreement_id"  data-toggle="modal" data-target="#itemDeleteModal"><span class="glyphicon glyphicon-remove"></span> Delete item</button>
               </div>
               <div class="col-lg-4">
                 <button class="btn btn-primary manage_button" [disabled]="item.state == 'CREATED'" (click)="moveToAgreement(item.agreement_id)"><span class="glyphicon glyphicon-search"></span> Agreement details</button>
@@ -49,6 +52,9 @@
         <div class="col-lg-12">
 
           <!--Item display-->
+          <div class="alert alert-warning" *ngIf="purchase_display.length == 0">
+            <p><span class="glyphicon glyphicon-exclamation-sign"></span> You have no active purchases.</p>
+          </div>
           <div *ngFor="let item of purchase_display" class="alert alert-info" style="cursor: pointer">
             <div class="row" (click)="moveToAgreement(item.agreement_id)">
               <div class="col-lg-4">
@@ -78,8 +84,12 @@
       <div class="row" *ngIf="manager_type == 'proposed'">
         <div class="col-lg-12">
 
+          <div class="alert alert-warning" *ngIf="proposal_display.length == 0">
+            <p><span class="glyphicon glyphicon-exclamation-sign"></span> You have no active proposals.</p>
+          </div>
+
           <!--Proposal status selector-->
-          <div class="form-group">
+          <div class="form-group" *ngIf="proposal_display.length > 0">
             <label>Show proposals</label>
             <select class="form-control" [(ngModel)]="proposal_state_chosen">
               <option selected="selected">PROPOSED</option>
@@ -124,9 +134,45 @@
 
         </div>
       </div>
+
     </div>
   </div>
 </div>
+
+<!--User's accepted items (purchases)-->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2">
+      <div class="row" *ngIf="manager_type == 'history'">
+        <div class="col-lg-12">
+          <div class="alert alert-warning" *ngIf="history_display.length == 0">
+            <p><span class="glyphicon glyphicon-exclamation-sign"></span> You have no previously active agreements.</p>
+          </div>
+          <table class="table table-striped" *ngIf="history_display.length > 0">
+            <thead>
+            <tr>
+              <th scope="col">Agreement ID</th>
+              <th scope="col">State</th>
+              <th scope="col">Actor</th>
+              <th scope="col">Created on</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let agreement of history_display">
+              <td scope="row"><a (click)="exploreAddress(agreement.agreement_id)">{{agreement.agreement_id}}</a></td>
+              <td scope="row">{{agreement.state}}</td>
+              <td scope="row" *ngIf="agreement.seller_id == global.globalvars.account_logged_in">SELLER</td>
+              <td scope="row" *ngIf="agreement.buyer_id == global.globalvars.account_logged_in">BUYER</td>
+              <td scope="row">{{agreement.date_created}}</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <!--Manage proposals modal-->
 <div id="termsModal" class="modal fade" role="dialog">
@@ -177,8 +223,8 @@
             </p>
             <div *ngIf="terms.status == 'PROPOSED'">
               <hr>
-              <button class="btn btn-success" (click)="acceptProposal(terms.terms_id, terms.agreement_id, terms.author_account)"><span class="glyphicon glyphicon-ok"></span> Accept</button>
-              <button class="btn btn-danger" (click)="rejectProposal(terms.terms_id)"><span class="glyphicon glyphicon-remove"></span> Reject</button>
+              <button class="btn btn-success" (click)="acceptProposal(terms.terms_id, terms.agreement_id, terms.author_account)" data-dismiss="modal"><span class="glyphicon glyphicon-ok"></span> Accept</button>
+              <button class="btn btn-danger" (click)="rejectProposal(terms.terms_id)"><span class="glyphicon glyphicon-remove" data-dismiss="modal"></span> Reject</button>
             </div>
           </div>
         </div>
@@ -187,6 +233,27 @@
       <!--Footer-->
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!--Manage proposals modal-->
+<div id="itemDeleteModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!--Header-->
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Delete item</h4>
+      </div>
+
+      <!--Footer-->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Abort</button>
+        <button type="button" class="btn btn-success" data-dismiss="modal" (click)="removeItem()">Confirm</button>
       </div>
     </div>
 
